--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DATABASE_URL="postgresql://kanmit:Manager2025@172.31.1.248:5432/supportbotdb?schema=public"
+DATABASE_URL="postgresql://kanmit:Manager2025@localhost:5432/supportbotdb?schema=public"
 PORT=3000
-OPENAI_API_KEY="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" 
+OPENAI_API_KEY="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"
 SESSION_PATH="./.session"
 WHATSAPP_QR_PATH="./src/qr/qr.png"
