--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "npm run prisma:setup && tsc && node dist/server.js",
     "start": "tsc && node dist/server.js",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "build": "tsc",
     "prisma:setup": "npx prisma db push && npx prisma generate"
   },
@@ -27,6 +28,11 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
+    "@jest/types": "^29.6.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
@@ -36,6 +42,7 @@
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
   }
