--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "build": "tsc",
-    "prisma:setup": "npx prisma db push && npx prisma generate"
+    "prisma:setup": "npx prisma db push && npx prisma generate",
+    "start:dev": "rm -rf dist && npm run prisma:setup && tsc -p tsconfig.json && pm2 kill && pm2 start ecosystem.config.js --env dev",
+    "start:test": "rm -rf dist logs wwebjs_auth && npm run prisma:setup && tsc -p tsconfig.json && npm run test && pm2 kill && pm2 start ecosystem.config.js --env test",
+    "start:prod": "rm -rf dist && npm run prisma:setup && tsc -p tsconfig.json && pm2 kill && pm2 start ecosystem.config.js --env production"
   },
   "keywords": [],
   "author": "Oyekanmi Owolabi",
@@ -22,6 +25,7 @@
     "express": "^4.21.2",
     "openai": "^4.78.0",
     "pg": "^8.13.1",
+    "pm2": "^5.4.3",
     "prisma": "^6.2.1",
     "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
